BaSTa eStoY CaNSado | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
@@ -10,7 +10,7 @@ Entre los distintos servicios que nos brindan los protocolos de transporte se en
 3. Realizar un direccionamiento usando ***sockets***.
 
 >[!tldr] Los Sockets
-> Los ***sockets*** son una interfaz o punto de acceso entre el proceso que contiene la aplicación de usuario y el protocolo de la capa de transporte, que le permite a las diferentes aplicaciones realizar peticiones y recibir mensajes. En la práctica, los sockets son la unión de la dirección IP del destinatario + el puerto donde está escuchando la aplicación. La conexión entre aplicaciones a nivel lógico es a través de los puertos, ya que son los procesos de usuario los que reciben información por los puertos asignados como tal, estos puertos deben ser exclusivos para cada aplicación.
+> Los ***sockets*** son una interfaz o punto de acceso entre el proceso que contiene la aplicación de usuario y el protocolo de la capa de transporte, que le permite a las diferentes aplicaciones realizar peticiones y recibir mensajes. En la práctica, los sockets son la unión de la dirección IP del destinatario + el puerto donde está escuchando la aplicación.
 
 ## Multiplexación y Desmultiplexación
 
