--- a/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
@@ -69,7 +69,7 @@ Frame Relay, es un sucesor del protocolo X.25, y al igual que esta, es una tecno
 - La multiplexación y conmutación de conexiones lógicas se hacen en el nivel 2, eliminándose así una capa completa de procesamiento obteniendo una mayor eficiencia.
 - No existe control de flujo ni de errores a nivel de enlaces individuales. Este control se realiza de extremo a extremo en las capas superiores.
 
-Frame Relay emplea un mecanismo de regulación, conocido como ***Tasa de conexión contratada***, la cual es la velocidad en bits/seg. que la red compromete a cumplir en la transmisión de tramas para cada conexión específica. Cualquier trama transmitida por encima del limite especificado por la tasa es marcada por el nodo encendiendo el bit DE, lo que indica que esa trama es susceptible de ser rechazada en caso de congestión. Existe un caudal máximo por encima del cual la trama es siempre rechazada.
+Frame Relay emplea un mecanismo de regulación, conocido como ***Tasa de conexión contratada (CIR)***, la cual es la velocidad en bits/seg. que la red compromete a cumplir en la transmisión de tramas para cada conexión específica. Cualquier trama transmitida por encima del limite especificado por la tasa es marcada por el nodo encendiendo el bit DE, lo que indica que esa trama es susceptible de ser rechazada en caso de congestión. Existe un caudal máximo por encima del cual la trama es siempre rechazada.
 La ventaja de la técnica de retransmisión de tramas es la potencia en el proceso de comunicaciones, ya que se reducen las funcionalidades del protocolo, aumentando así el procesamiento interno de la red. En consecuencia, cabe esperar un menor retardo y un mayor rendimiento.
 ### Asynchrounous Transfer Mode (ATM) 
 
