--- a/4º Año/Comunicaciones y Redes/Unidad 2/1. Capa de Aplicacion.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/1. Capa de Aplicacion.md
@@ -31,7 +31,7 @@ El protocolo HTTP se basa en la arquitectura o modelo cliente-servidor, en donde
 - Los navegadores son los agentes de usuario que recuperan los recursos deseados, facilitando la navegación a través de la web e implementan el lado del cliente del protocolo.
 - Los servidores alojan objetos web direccionables por una URL.
 
-El protocolo HTTP define la estructura de los mensajes y como se realiza el intercambio entre el cliente y el servidor, utilizando TCP como protocolo de transporte, pudiendo recibir peticiones a través del puerto 80. Además, este protocolo establece una serie de métodos mediante las cuales el cliente realiza las peticiones, cuando se realiza cada petición tanto el cliente como el servidor reciben un código numérico que indican diferentes cosas de acuerdo al tipo de código, todo esto a su vez definido dentro de la especificación de HTTP.
+El protocolo HTTP define la estructura de los mensajes y como se realiza el intercambio entre el cliente y el servidor, utilizando TCP a través del puerto 80. Además, este protocolo establece una serie de métodos mediante las cuales el cliente realiza las peticiones, cuando se realiza cada petición tanto el cliente como el servidor reciben un código numérico que indican diferentes cosas de acuerdo al tipo de código, todo esto a su vez definido dentro de la especificación de HTTP.
 
 >[!tldr] Conexiones Persistentes y no Persistentes
 >Cuando hablamos del protocolo HTTP, decimos que una ***conexión no es persistente*** si todos los mensajes de solicitud/respuesta para cada objeto se envía a través de distintas conexiones TCP, mientras que decimos que la ***conexión es permanente*** si múltiples mensajes se envían a través de la misma conexión TCP.
@@ -46,7 +46,7 @@ Las novedades de la versión 2 del protocolo son las siguientes:
 
 - Permite la multiplexación, es decir, varios flujos pueden ser transportados simultáneamente a través de una única conexión TCP.
 - Los encabezados HTTP se comprimen utilizando una combinación de esquemas de compresión.
-- El control de flujo y los distintos mecanismos de dependencia que permiten a los clientes y servidores HTTP / 2 señalar cómo transmitir objetos.
+- El control de flujo y los distintos mecanismos de dependencia permiten a los clientes y servidores HTTP / 2 señalar cómo transmitir objetos.
 - Mecanismo de inserción de recursos que facilita el envío de recursos de los servidores HTTP / 2 a sus clientes.
 
 Los principales bloques de transmisión de HTTP 2 son los siguientes:
@@ -80,7 +80,7 @@ HTTP implementa servidores sin estado, esto significa que no se guarda informaci
 
 ### Simple Mail Transfer Protocol (SMTP)
 
-En este protocolo los sistemas actúa tanto como cliente como servidor. Además de transferir mensajes entre dos usuarios, debe proporcionar medios para resolver problemas ante fallas de la red o máquinas, ya que en caso de que no se pueda mandar el mensaje, el servidor emisor va a conservar el mensaje y lo intentará enviar de nuevo.
+En este protocolo los sistemas actúa tanto como cliente como servidor. Además de transferir mensajes entre dos usuarios, proporciona medios para resolver problemas ante fallas de la red o equipos terminales.
 La infraestructura de los correos electrónicos está compuesta, además de por este protocolo, de dos partes fundamentales:
 
 1. Los ***agentes de usuario*** que le permiten a los distintos usuarios leer sus correos electrónicos.
@@ -91,7 +91,7 @@ SMTP tiene algunos defectos como el hecho de que todos los encabezados deben est
 
 ##### Multipurpose Internet Mail Extension (MIME)
 
-Es una ampliación del RFC 822 para resolver problemas que acarreaba SMTP. Este protocolo permite la transferencia de archivos ejecutables y binarios, mensajes de cualquier tamaño y en otros códigos, además de ASCII. En su especificación se definen nuevos campos en la cabecera del mensaje, soporte para nuevos formatos de contenido (Texto sin formato, Imágenes, Audio, Video, Aplicación, Multiparte) y esquemas de codificación para interpretar cualquier formato deseado. La codificación de los mensajes en MIME se realiza con Radix-64, donde se codifican los datos para que no sean vulnerables al procesarse por los programas de transporte de correo.
+Es una ampliación del RFC 822 para resolver problemas que acarreaba SMTP. En su especificación se definen nuevos campos en la cabecera del mensaje, soporte para nuevos formatos de contenido (Texto sin formato, Imágenes, Audio, Video, Aplicación, Multiparte, Ejecutables, Binarios) y esquemas de codificación para interpretar cualquier formato deseado (no solo el ASCII), además de permitir mensajes de mayor tamaño. La codificación de los mensajes en MIME se realiza con Radix-64, donde se codifican los datos para que no sean vulnerables al procesarse por los programas de transporte de correo.
 MIME no es un protocolo por si mismo, sino que es una mejora de SMTP el cual solo agrega campos extras a los encabezados, lo que le permite enviar una gama más amplia de información. Además de implementar una mayor seguridad utilizando cifrado para sus mensajes.
 ##### Protocolos de Acceso al Correo
 
