Completando y corrigiendo | MS II

--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
@@ -18,7 +18,7 @@ A la hora de enviar datos a través de una red, la capa de transporte recibe los
 Cada proceso tiene un ***socket*** por donde se reciben y entregan los datos entre la capa de red y la capa de transporte. En una mismo equipo puede haber más de un socket abierto, por eso cada socket tiene un identificar único, según sea TCP o UDP.
 
 - La *Desmultiplexación* es una tarea realizada por la capa de transporte, en el cual se revisan un conjunto de campos dentro del segmento, con el fin de identificar el socket reseptor.
-- La *Multiplezación* es la tarea que consiste en reunir los distintos paquetes de datos de los distintos sockets para luego crear los segmentos que se pasaran a la capa de red.
+- La *Multiplesación* es la tarea que consiste en reunir los distintos paquetes de datos de los distintos sockets para luego crear los segmentos que se pasaran a la capa de red.
 
 Cada uno de los sockets debe tener un identificador único, además, cada segmento debe tener un campo que indique a que puerto debe entregarse el segmento. Véase en la imagen un modelo simplificado de segmento:
 
