--- a/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
@@ -21,7 +21,7 @@ Según el estándar internacional de Especificación de Requerimientos IEEE 830:
 - Aseguramiento de Calidad.
 
 >[!important] Elicitación de Requerimientos
->La elicitación de requerimientos es el proceso mediante el cual el equipo de desarrollo adquiere los requerimientos por parte del cliente, los distintos métodos y estrategias para la adquisición de estos mismos fueron descritos con mayor claridad en la [[2. Proceso de Ingeniería de Requerimientos#Técnicas para la Adquisición de Requerimientos|Unidad 3]] de metodología de sistemas 1.
+>La elicitación de requerimientos es el proceso mediante el cual el equipo de desarrollo adquiere los requerimientos por parte del cliente, los distintos métodos y estrategias para la adquisición de estos mismos fueron mejor explicados en la [[2. Proceso de Ingeniería de Requerimientos#Técnicas para la Adquisición de Requerimientos|Unidad 3]] de metodología de sistemas I.
 
 ## Características de un Requerimiento
 
@@ -45,10 +45,10 @@ El Análisis de Requerimientos es un proceso al cual Sommerville, llama ***Ingen
 	1. **Separar funcionalidad de implementación**: Una especificación es una descripción de lo que se desea, en vez de cómo se realiza. Esto en la práctica puede llegar a no suceder del todo; sin embargo, es un buen lineamiento a seguir.
 	2. **Una especificación debe abarcar el entorno en el que el sistema opera**: El entorno en el que opera el sistema y con el que interactúa debe ser especificado.
 	3. **Debe ser modificable**: Ninguna especificación puede ser siempre totalmente completa. El entorno en el que existe es demasiado complejo para ello. Una especificación es un modelo, una abstracción, de alguna situación real, por tanto, será incompleta. Además, al ser formulada existirán muchos niveles de detalle.
-- ***Validación***: verificar que los requerimientos realmente definen el sistema que quiere el cliente. Los requerimientos deben ser validados para:
-	- Asegurar que el ingeniero de software los ha comprendido.
-	- El documento de especificación de requerimientos de software es conforme a los estándares establecidos, comprensible, consistente y completo.
-	- Se trata de asegurar que el documento SRS define el software adecuado, es decir, el que espera el usuario.
+- ***Validación***: verificar que los requerimientos realmente definen el sistema que quiere el cliente. Los requerimientos deben ser validados para poder:
+	- Asegurar que los ingenieros de software los han comprendido.
+	- Garantizar que el documento de especificación de requerimientos de software es comprensible, consistente, completo y conforme a los estándares establecidos.
+	- Asegurar que el documento de especificación de requerimientos define el software adecuado, es decir, el que espera el usuario.
 	- Las principales técnicas de validación:
 		- Revisiones: Un grupo de personas lee, analiza, discute el documento de SRS y las formas de solucionar los problemas detectados, es por esta razón que deben participar representantes del cliente y los usuarios.
 		- Prototipado: Se crean versiones del producto y se los da a testear al cliente para recibir una retroalimentación temprana.
@@ -67,7 +67,7 @@ La Gestión de Requerimientos implica la recolección, almacenamiento y mantenim
 
 ## Requerimientos y Restricciones
 
- Los requerimientos de un sistema se pueden dividir en requerimientos funcionales y no funcionales. Los ***requerimientos funcionales*** describen una interacción entre el sistema y su ambiente, describen cómo debe comportarse el sistema ante determinado estímulo, es decir, describen lo que el sistema debe hacer. Los ***requerimientos no funcionales***, por su parte, ponen límites y restricciones al sistema, y apoyando las funcionalidades, son las propiedades que el producto debe tener, por ejemplo, Apariencia y sensación, Usabilidad, Performance, Operatividad, entre otras.
+ Los requerimientos de un sistema se pueden dividir en requerimientos funcionales y no funcionales. Los ***requerimientos funcionales*** describen una interacción entre el sistema y su ambiente, describen cómo debe comportarse el sistema ante determinado estímulo, es decir, describen lo que el sistema debe hacer. Los ***requerimientos no funcionales***, por su parte, ponen límites y restricciones al sistema, y apoyando las funcionalidades, son las propiedades o características que el producto debe tener, por ejemplo, Apariencia y sensación, Usabilidad, Performance, Operatividad, entre otras.
 
 #### Restricciones Globales
 
