--- a/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
@@ -5,7 +5,7 @@ En UML se utilizan cinco vistas para visualizar, especificar, construir y docume
 ### Diagrama de Casos de Uso
 
 Los ***casos de uso*** son una técnica para capturar información de cómo un sistema o negocio trabaja, o de cómo se desea que trabaje. Ayuda a obtener requerimientos desde el punto de vista del Usuario, los cuales son considerados actores, modelando la funcionalidad del sistema. 
-No pertenece estrictamente al enfoque orientado a objeto, es una técnica para captura de requisitos. Es el poderoso concepto que ayuda al analista a comprender la forma en que un sistema deberá comportarse. 
+No pertenece estrictamente al enfoque orientado a objeto, es una técnica para captura de requerimientos. Es un poderoso concepto que ayuda al analista a comprender la forma en que un sistema deberá comportarse. 
 Los casos de usos constan de los siguientes elementos:
 
 - **Actor:** Representa el rol que juega un usuario con respecto al sistema. Un actor no necesariamente representa a una persona en particular, sino más bien la labor que realiza frente al sistema, es decir, un actor es toda aquella entidad que interactúa con el sistema, estos pueden ser personas o incluso otros sistemas. La forma de representarlos es mediante un monigote de palos.
@@ -53,10 +53,11 @@ Los diagramas de actividad constan con los siguientes elementos:
 >- Todo el diagrama fluye de forma descendente.
 >- Las salidas de una bifurcación condicional siempre deben ir hacia una actividad, no se puede ir de un condicional a otro.
 >- En los condicionales la secuencia del "Si" siempre se coloca hacia abajo y el "No" va a depender, en caso de que se necesite retornar a actividades anteriores el "*No*" sale por la izquierda del rombo, pero en el caso de que dicha secuencia tenga un desarrollo más elaborado que involucre una serie de actividades, entonces el flujo saldrá por la derecha.
+>- Una subdivisión no puede ir directamente a una bifurcación, siempre debe haber una actividad de por medio que lleve a la bifurcación.
 
 ### Diagrama de Secuencias
 
-Es un diagrama de interacción que muestra como se comunican los objetos entre durante el transcurso del tiempo.
+Es un diagrama de interacción que muestra como se comunican los distintos objetos que forman parte del sistema entre si durante el transcurso del tiempo.
 
 ![[elementos_secuencias.png]]
 
@@ -83,7 +84,7 @@ Este diagrama es similar al Diagrama de Secuencia, pero muestra la forma en cóm
 
 ### Diagrama de Estado
 
-Muestra el conjunto de estados por los cuales pasa un objeto durante su vida en una aplicación, junto con los cambios que permiten pasar de un estado a otro.  Representa los estados que puede encontrarse un objeto junto con las transiciones entre los estados, y muestro los puntos inicial y final de una secuencia de cambios de estados. 
+Muestra el conjunto de estados por los cuales pasa un objeto durante su vida en una aplicación. Representa los estados en los que puede encontrarse un objeto, junto con las transiciones entre estos estados, y muestro los puntos inicial y final de una secuencia de cambios de estados.
 Un ***estado de acción*** se puede ver como un caso especial de un estado de actividad. Es usado para mostrar la vida de un objeto determinado a través de todo el sistema, los eventos causan una transición de un estado a otro, y las acciones que resultan del cambio de estado. Los Elementos de un Estado son: 
 - **Estado:** Es una condición o situación en la vida de un objeto durante la cual se satisface alguna condición, realiza alguna actividad o espera algún evento. 
 - **Evento:** Es la especificación de un acontecimiento significativo que ocupa un lugar en el espacio y en el tiempo. 
@@ -96,8 +97,7 @@ Un ***estado de acción*** se puede ver como un caso especial de un estado de ac
 ## Vista Estructural
 ### Diagrama de clases
 
- Un diagrama de clases es un diagrama de estructura estática que describe la estructura de un sistema mostrando las clases del sistema, sus atributos, operaciones, y sus relaciones con otras clases. Es el diagrama más importante en la orientación a objetos, porque constituye la guía para convertir el diseño lógico del código. Además de ser una de las primeras y más usadas herramientas de generación automática de código.
-El diagrama de clases cuenta con los siguientes componentes:
+ Un diagrama de clases es un diagrama de estructura estática que describe la estructura de un sistema mostrando las clases del sistema, sus atributos, operaciones, y sus relaciones con otras clases. Es el diagrama más importante en la orientación a objetos, porque constituye la guía para convertir el diseño lógico a código. El diagrama de clases cuenta con los siguientes componentes:
 
 ![[componentes_clases.png]]
 
@@ -115,7 +115,7 @@ El diagrama de clases cuenta con los siguientes componentes:
 
 ### Diagrama de Objetos
 
-Un diagrama de objetos es un gráfico de instancias, incluyendo objetos y datos. Un diagrama de objetos es una instancia de un diagrama de clases; muestra una 'foto' del estado de un sistema en un punto de tiempo determinado. Se utilizan para validar el modelo del dominio. Para ello es necesario ejecutar los siguientes pasos: 
+Un diagrama de objetos es un gráfico de instancias, el cual incluye objetos y datos. Un diagrama de objetos es una instancia de un diagrama de clases; muestra una 'foto' del estado de un sistema en un punto de tiempo determinado. Se utilizan para validar el modelo del dominio. Para ello es necesario ejecutar los siguientes pasos: 
 
 1. Elegir uno o más casos de uso que estén altamente relacionados con el modelo del dominio. 
 2. Elegir uno o más escenarios de los casos de uso seleccionados en el punto anterior. Es recomendable elegir escenarios que exploren diferentes situaciones.
@@ -125,9 +125,10 @@ Un diagrama de objetos es un gráfico de instancias, incluyendo objetos y datos.
 ## Vista de Implementación
 ### Diagrama de Componentes
 
-Un componente de software es una parte física de un sistema y se encuentra en la computadora y no en la mente del analista, este modelo los componentes son cualquier tipo de archivo, ya sea de texto o ejecutable que esten en una computadora. Los Diagramas de Componentes se utilizan para: 
+En este modelo los componentes son cualquier tipo de archivo, ya sea de texto o ejecutable que estén en una computadora. Los Diagramas de Componentes se utilizan para:
+
 - Los clientes puedan ver la estructura del sistema finalizado. 
-- Los desarrolladores cuenten con una estructura con la cual trabajar en adelante. 
+- Los desarrolladores cuenten con una estructura sobre la cual trabajar desde ahí en adelante. 
 - Ayudar a quienes escriban las notas técnicas y la documentación a entender lo que escriben.
 
 Los Diagramas de Componentes se utilizan para ***modelar código fuente***, ***modelar versiones ejecutables***, ***modelar base de datos físicas***, ***modelar sistemas adaptables***.  Los componentes representan todos los tipos de elementos de software que entran en la fabricación de aplicaciones informáticas, mostrando como están organizados y la dependencia que existe entre ellos, cubriendo así la vista de la implementación estática.
@@ -147,9 +148,7 @@ Los Diagramas de Componentes se utilizan para ***modelar código fuente***, ***m
 ### Diagrama de Despliegue o Distribución
 
 Los ***diagramas de despliegue o distribución*** muestran la disposición física de los distintos nodos que componen un sistema y el reparto de los componentes sobre dichos nodos, modelando la topología del hardware sobre el que se ejecuta el Sistema Software.  Este tipo de diagramas suele utilizarse para modelar *sistemas distribuidos* o *sistemas empotrados*. 
-Representa los dispositivos y equipos mostrando sus interconexiones y el software que se encuentra en cada máquina. Además de modelar la distribución en tiempo de ejecución de los elementos de procesamiento y componentes de software, junto a los procesos y objetos asociados. 
-En estos diagramas cada nodo es un elemento físico, que existe en tiempo de ejecución y representa un recurso computacional que cuentan con capacidad de procesamiento y en algunos casos de almacenamiento. Cada nodo puede contener instancias de componentes. 
-Esta vista permite determinar las consecuencias de la distribución y la asignación de recursos.
+Representa los dispositivos y equipos mostrando sus interconexiones y el software que se encuentra en cada máquina. Además de modelar la distribución en tiempo de ejecución de los elementos de procesamiento y componentes de software, junto a los procesos y objetos asociados. Esta vista permite determinar las consecuencias de la distribución y la asignación de recursos.
 
  ![[ejemplo_distribucion.png]]
  
