--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
@@ -1,6 +1,5 @@
 La utilización de metodologías para el desarrollo de aplicaciones es casi imposible de omitir en la actualidad, debido a la gran necesidad de control de variables que conlleva el mismo desarrollo, y para la ordenada elaboración de las aplicaciones, por lo tanto, seguir una metodología y estándares nos llevan a estar en competitividad en todo momento. Las metodologías, los estándares y las herramientas siguen un único propósito, el cual consiste en la elaboración de aplicaciones de manera eficiente, ordenada y con el menor número de defectos.
-En este contexto, ***RUP*** surge como una de las metodologías estándares más utilizadas para el análisis, implementación y documentación de sistemas orientados a objetos.
-RUP es producto del proceso de ingeniería de software, que proporciona un enfoque disciplinado para asignar tareas y responsabilidades dentro de una organización del desarrollo. Su meta es asegurar la producción del software de alta calidad que resuelve las necesidades de los usuarios dentro de un presupuesto y tiempo establecidos. Además, proporciona una serie de disciplinas en las cuales guían el proceso de documentación e implementación, asimismo cuenta con guías para un buen desarrollo, todo ellas dentro de las respectivas fases con las cuales cuenta.
+En este contexto, ***RUP*** surge como una de las metodologías estándares más utilizadas para el análisis, implementación y documentación de sistemas orientados a objetos. RUP es producto del proceso de ingeniería de software, que proporciona un enfoque disciplinado para asignar tareas y responsabilidades dentro de una organización del desarrollo. Su meta es asegurar la producción del software de alta calidad que resuelve las necesidades de los usuarios dentro de un presupuesto y tiempo establecidos. Además, proporciona una serie de disciplinas en las cuales guían el proceso de documentación e implementación, asimismo cuenta con guías para un buen desarrollo, todo ellas dentro de las respectivas fases con las cuales cuenta.
 
 ### Dimensiones del Modelo
 
@@ -10,17 +9,17 @@ El RUP tiene dos dimensiones, el eje horizontal representa tiempo y demuestra lo
 
 En la figura se puede observar como varía el énfasis de cada disciplina en un cierto plazo en el tiempo, y durante cada una de las fases. Por ejemplo, en iteraciones tempranas, pasamos más tiempo en requerimientos, y en las últimas iteraciones pasamos más tiempo en poner en práctica la realización del proyecto en sí. 
 
-| Flujos de Trabajo                      | Descripción                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
-| -------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **Modelado del negocio**               | - Comprender la estructura y la dinámica de la organización. <br>- Comprender problemas actuales e identificar posibles mejoras. <br>- Comprender los procesos de negocio.                                                                                                                                                                                                                                                                                                                                                                                |
-| **Requerimientos**                     | - Establecer lo que el sistema debe hacer (Especificar Requisitos) <br>- Definir los límites del sistema, y una interfaz de usuario. <br>- Realizar una estimación del costo y tiempo de desarrollo.                                                                                                                                                                                                                                                                                                                                                      |
-| **Análisis y diseño**                  | Esta disciplina define la arquitectura del sistema y tiene como objetivos trasladar requerimientos en especificaciones de implementación.                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| **Implementación**                     | - Implementar las clases de diseño como componentes.<br>- Asignar los componentes a los nodos.<br>- Probar los componentes individualmente.<br>- Integrar los componentes en un sistema ejecutable.                                                                                                                                                                                                                                                                                                                                                       |
-| **Pruebas**                            | - Verificar la integración de los componentes.<br>- Verificar que todos los requisitos han sido implementados.<br>- Asegurar que los defectos detectados han sido resueltos antes de la distribución.                                                                                                                                                                                                                                                                                                                                                     |
-| **Despliegue**                         | - Asegurar que el producto está preparado para el cliente, proceder a su entrega y recepción por el cliente.<br>- Probar el software en su entorno final (Prueba Beta), empaquetarlo, distribuirlo e instalarlo, así como la tarea de enseñar al usuario.                                                                                                                                                                                                                                                                                                 |
-| **Gestión de configuración y cambios** | Se debe tener en cuenta los siguientes problemas:<br>- **Actualización simultánea:** Es la actualización de algo elaborado con anterioridad, sin saber que alguien más lo está actualizando. <br>- **Notificación limitada:** Al realizar alguna modificación, no se deja información sobre lo que se hizo, por lo tanto, no se sabe quién, como, y cuando se hizo. <br>- **Versiones múltiples:** No saber con exactitud, cual es la última versión, y al final no se tiene un orden sobre que modificaciones se han realizado a las diversas versiones. |
-| **Gestión de Proyecto**                | - Equilibrar los objetivos competitivos. <br>- Administrar el riesgo, y superar restricciones para entregar un producto que satisface las necesidades de clientes y los usuarios con éxito (los que pagan el dinero).                                                                                                                                                                                                                                                                                                                                     |
-| **Entorno**                            | Su propósito es proveer a la organización que desarrollará el software, un ambiente en el cual basarse, el cual provee procesos y herramientas para poder desarrollar el software.                                                                                                                                                                                                                                                                                                                                                                        |
+| Flujos de Trabajo                      | Tareas a Realizar                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+| -------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Modelado del negocio**               | Comprender la estructura y la dinámica de la organización, comprender los problemas actuales e identificar posibles mejoras, con el fin de comprender los procesos de negocio.                                                                                                                                                                                                                                                                                                                                                                     |
+| **Requerimientos**                     | Establecer lo que el sistema debe hacer, definir los límites del sistema, y una interfaz de usuario, y realizar una estimación del costo y tiempo de desarrollo.                                                                                                                                                                                                                                                                                                                                                                                   |
+| **Análisis y diseño**                  | Esta disciplina define la arquitectura del sistema y tiene como objetivos trasladar requerimientos en especificaciones de implementación.                                                                                                                                                                                                                                                                                                                                                                                                          |
+| **Implementación**                     | Implementar las clases de diseño como componentes, asignar los componentes a los nodos, probar los componentes individualmente e integrar los componentes en un sistema ejecutable.                                                                                                                                                                                                                                                                                                                                                                |
+| **Pruebas**                            | Verificar la integración de los componentes, verificar que todos los requerimientos han sido implementados y asegurar que los defectos detectados han sido resueltos antes de la distribución.                                                                                                                                                                                                                                                                                                                                                     |
+| **Despliegue**                         | Asegurar que el producto está preparado para el cliente, para proceder a su entrega y recepción por el cliente, probar el software en su entorno final, empaquetarlo, distribuirlo e instalarlo, así como la tarea de enseñar al usuario.                                                                                                                                                                                                                                                                                                          |
+| **Gestión de configuración y cambios** | Se debe tener en cuenta los siguientes problemas:<br>**Actualización simultánea:** Es la actualización de algo elaborado con anterioridad, sin saber que alguien más lo está actualizando.<br>**Notificación limitada:** Al realizar alguna modificación, no se deja información sobre lo que se hizo, por lo tanto, no se sabe quién, como, y cuando se hizo. <br>**Versiones múltiples:** No saber con exactitud, cual es la última versión, y al final no se tiene un orden sobre que modificaciones se han realizado a las diversas versiones. |
+| **Gestión de Proyecto**                | Equilibrar los objetivos competitivos y administrar el riesgo, superando las restricciones para entregar un producto que satisface las necesidades de clientes y los usuarios con éxito.                                                                                                                                                                                                                                                                                                                                                           |
+| **Entorno**                            | Su propósito es proveer a la organización que desarrollará el software, un ambiente en el cual basarse, el cual provee procesos y herramientas para poder desarrollar el software.                                                                                                                                                                                                                                                                                                                                                                 |
 
 ### Características de Modelo
 
@@ -59,7 +58,7 @@ Al mismo tiempo cada ciclo de RUP está compuesto por fases y cada una de estas 
 >	- RUP ha madurado con el tiempo: el uso. 
 >	- UML hace que el software se apegue a estándares de la industria. 
 >	- Adaptable a la organización. 
->	- Herramientas de buena implementación. 
+>	- Herramientas de buena implementación.
 >	- Define actividades, roles y responsabilidades desde jefe de proyecto hasta los analistas, desarrolladores y equipos de prueba.
 >- **Desventajas**:
 >	- Pretende prever y tener todo el control de antemano. 
