--- a/4º Año/Metodologia de Sistemas II/Unidad 4/1. Diseño Arquitectonico.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 4/1. Diseño Arquitectonico.md
@@ -1,19 +1,18 @@
-El diseño arquitectónico se interesa por entender cómo debe organizarse un sistema y cómo tiene que diseñarse la estructura global de ese sistema. Es la primera etapa en el proceso de diseño del software, la salida de este proceso consiste en un modelo arquitectónico que describe la forma en que se organiza el sistema como un conjunto de componentes en comunicación.
-Existen dos formas de utilizar un modelo arquitectónico de un programa:
+El diseño arquitectónico se interesa por entender cómo debe organizarse un sistema y cómo tiene que diseñarse la estructura global de ese sistema. Es la primera etapa en el proceso de diseño del software, la salida de este proceso consiste en un modelo arquitectónico que describe la forma en que se organiza el sistema como un conjunto de componentes en comunicación. Existen dos formas de utilizar un modelo arquitectónico de un programa:
 
 1. **Como una forma de facilitar la discusión acerca del diseño del sistema**. Una visión arquitectónica de alto nivel de un sistema es útil para la comunicación con los participantes de un sistema y la planeación del proyecto, ya que no se satura con detalles. El modelo arquitectónico identifica los componentes claves que se desarrollarán, de modo que los administradores pueden asignar a individuos para planear el desarrollo de dichos sistemas.
 2. **Como una forma de documentar una arquitectura que se haya diseñado**. La meta aquí es producir un modelo de sistema completo que muestre los diferentes componentes en un sistema, sus interfaces y conexiones. El argumento para esto es que tal descripción arquitectónica detallada facilita la comprensión y la evolución del sistema.
 
 ### Decisiones en el Diseño Arquitectónico
 
-Recordemos que el diseño arquitectónico es un proceso creativo en el cual se diseña la organización del sistema que cubrirá los requerimientos funcionales y no funcionales de éste. Durante este proceso de diseño, los arquitectos del sistema deben tomar algunas decisiones estructurales sobre, pro ejemplo, la aplicación de modelos genéricos de resolución, los patrones de diseño que se utilizarán, el enfoque principal de la estructura, las estrategias utilizadas para controlar el comportamiento de los componentes, como se documentará dicha arquitectura, entre otras.
+Recordemos que el diseño arquitectónico es un proceso en el cual se diseña la organización del sistema que cubrirá los requerimientos funcionales y no funcionales de éste. Durante este proceso de diseño, los arquitectos del sistema deben tomar algunas decisiones estructurales sobre, por ejemplo, la aplicación de modelos genéricos de resolución, los patrones de diseño que se utilizarán, el enfoque principal de la estructura, las estrategias utilizadas para controlar el comportamiento de los componentes, como se documentará dicha arquitectura, entre otras.
 La arquitectura de un sistema de software puede basarse en un ***patrón arquitectónico*** particular que satisfaga las necesidades del sistema. Un patrón arquitectónico es una descripción de la organización del sistema, tal como una organización cliente-servidor o una arquitectura por capas. La elección de una estructura arquitectónica particular dependerán de los requerimientos no funcionales del sistema:
 
 - **Rendimiento**: Si el rendimiento es un requerimiento crítico, la arquitectura debe diseñarse para realizar operaciones críticas dentro de un pequeño número de componentes, con todos estos componentes desplegados en la misma computadora en vez de distribuirlos por la red.
 - **Seguridad**: Si la seguridad es un requerimiento crítico, será necesario usar una estructura en capas, con los activos más críticos protegidos en las capas más internas, y con un alto nivel de validación de seguridad aplicado a dichas capas.
 - **Protección**: Si la protección es un requerimiento crítico, la arquitectura debe diseñarse de modo que las operaciones relacionadas con la protección se ubiquen en algún componente individual o en un pequeño número de componentes. Esto reduce los costos y problemas de validación de la protección, y hace posible ofrecer sistemas de protección relacionados que, en caso de falla, desactiven con seguridad el sistema.
 - **Disponibilidad**: Si la disponibilidad es un requerimiento crítico, la arquitectura tiene que diseñarse para incluir componentes redundantes, de manera que sea posible sustituir y actualizar componentes sin detener el sistema.
-- **Mantenibilidad**: Si la mantenibilidad es un requisito fundamental, la arquitectura del sistema debe diseñarse utilizando componentes independientes y de grano fino, de modo que puedan modificarse fácilmente. Los productores de datos deben estar separados de los consumidores, y se debe evitar el uso compartido de estructuras de datos.
+- **Mantenibilidad**: Si la mantenibilidad es un requisito fundamental, la arquitectura del sistema debe diseñarse utilizando componentes independientes y con un bajo acoplamiento, de modo que puedan modificarse fácilmente. Los productores de datos deben estar separados de los consumidores, y se debe evitar el uso compartido de estructuras de datos.
 
 ## Patrones Arquitectónicos
 
@@ -23,4 +22,9 @@ Un patrón arquitectónico se puede considerar como una descripción abstracta e
 2. **Vista**: Es la capa encargada de producir la visualización de la interfaz de usuario, basándose en los datos proveídos por el modelo.
 3. **Controlador**: Es el enlace entre el Modelo y la Vista, se encarga de realizar las peticiones de los datos al modelo para luego enviarlos a la Vista y finalmente retornar esa la visualización al usuario.
 
-Como este patrón arquitectónico, existen muchos otros más, tales como la arquitectura basada en capas, cliente-servidor, basada en repositorios, arquitectura de tuberías y filtros, entro otros. Cabe aclarar que estos patrones pueden utilizarse de forma conjunta para cubrir varias características de un proyecto
+Como este patrón arquitectónico, existen muchos otros más, tales como la arquitectura basada en capas, cliente-servidor, basada en repositorios, entro otros. A grandes rasgos los patrones arquitectónico se pueden clasificar en 4 categorías principales:
+
+- **From Mud to Structure**: Los patrones en esta categoría en particular, apoyan una descomposición controlada de la tarea general del sistema en subtareas cooperativas. Esta categoría incluye el patrón por capas, el patrón tuberías y filtros y el patrón de pizarra.
+- **Sistemas Distribuidos**: Esta categoría incluye al patron Broker, y se refiere a dos patrones en otras categorías como lo son Microkernel y tuberías y filtros. El patrón Broker proporciona una infraestructura completa para aplicaciones distribuidas. Los patrones Microkernel y Tuberías y Filtros solo consideran la distribución como una preocupación secundaria y, por lo tanto, se listan bajo sus respectivas categorías principales.
+- **Sistemas Interactivos**: Esta categoría comprende dos patrones principales el patrón Modelo-Vista-Controlador (MVC) y el patrón Presentación-Abstracción-Control (PAC). Ambos apoyan la estructuración de sistemas de software que presentan interacción humano-computadora.
+- **Sistemas Adaptables**: El patrón Reflexión y el patrón Microkernel apoyan fuertemente la extensión de aplicaciones y su adaptación a la evolución de la tecnología y los requisitos funcionales cambiantes.
