Completando y corrigiendo v2 | MS II

--- a/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
@@ -4,9 +4,8 @@ En UML se utilizan cinco vistas para visualizar, especificar, construir y docume
 
 ### Diagrama de Casos de Uso
 
-Los ***casos de uso*** son una técnica para capturar información de cómo un sistema o negocio trabaja, o de cómo se desea que trabaje. Ayuda a obtener requerimientos desde el punto de vista del Usuario, los cuales son considerados actores, modelando la funcionalidad del sistema. 
-No pertenece estrictamente al enfoque orientado a objeto, es una técnica para captura de requerimientos. Es un poderoso concepto que ayuda al analista a comprender la forma en que un sistema deberá comportarse. 
-Los casos de usos constan de los siguientes elementos:
+Los ***casos de uso*** son una técnica para capturar información de cómo un sistema o negocio trabaja, o de cómo se desea que trabaje. Ayuda a obtener requerimientos desde el punto de vista del Usuario, los cuales son considerados actores, modelando la funcionalidad del sistema.
+No pertenece estrictamente al enfoque orientado a objeto, pero es una técnica para captura de requerimientos que ayuda al analista a comprender la forma en que un sistema deberá comportarse. Los casos de usos constan de los siguientes elementos:
 
 - **Actor:** Representa el rol que juega un usuario con respecto al sistema. Un actor no necesariamente representa a una persona en particular, sino más bien la labor que realiza frente al sistema, es decir, un actor es toda aquella entidad que interactúa con el sistema, estos pueden ser personas o incluso otros sistemas. La forma de representarlos es mediante un monigote de palos.
 - **Caso de Uso:** Operación o tarea específica que se realiza tras una orden de algún agente externo, originada por una petición de un actor o bien por la invocación desde otro caso de uso. Los casos de usos se representan mediante óvalos que contiene el nombre del caso de uso.
