--- a/4º Año/Metodologia de Sistemas II/Unidad 4/1. Diseño Arquitectonico.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 4/1. Diseño Arquitectonico.md
@@ -16,7 +16,7 @@ La arquitectura de un sistema de software puede basarse en un ***patrón arquite
 
 ## Patrones Arquitectónicos
 
-Un patrón arquitectónico se puede considerar como una descripción abstracta estilizada de buena práctica, que se ensayó y puso a prueba en diferentes sistemas y entornos. El patrón más conocido en la actualidad es el ***MVC*** (Model-View-Controller), el cual se utiliza para el manejo de los sistemas basados en la web. Este modelo consta de 3 componentes principales:
+Un patrón arquitectónico se define como una solución reutilizable a un problema común dentro de un contexto arquitectónico específico, se puede considerar como una descripción abstracta de alto nivel, diseñada para solucionar un problema particulares de diseño de software. Dicha solución fue ensayada y puesta a prueba en diferentes sistemas y entornos. El patrón más conocido en la actualidad es el ***MVC*** (Model-View-Controller), el cual se utiliza para el manejo de los sistemas basados en la web. Este modelo consta de 3 componentes principales:
 
 1. **Modelo**: Esta capa contiene a toda la lógica del negocio en cuestión.
 2. **Vista**: Es la capa encargada de producir la visualización de la interfaz de usuario, basándose en los datos proveídos por el modelo.
