--- a/4º Año/Metodologia de Sistemas II/Unidad 3/1. Modelado de Software y UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/1. Modelado de Software y UML.md
@@ -1,4 +1,4 @@
-Las personas construyen modelos arquitectónicos para ayudar al usuario a visualizar el producto final. Esto se puede lograr a través de los ***modelos***, los cuales son una simplificación de la realidad y proporciona los planos de un sistema. Estos planos van escalando en complejidad mientras más complejo sea el proceso de construcción que se esté modelando, es decir, la complejidad depende directamente de la dificultad del proceso para realizar dicho sistema.
+Las personas construyen modelos para ayudar al usuario a visualizar el producto final. Estos modelos son una simplificación de la realidad y proporciona los planos de un sistema, los cuales van escalando en complejidad mientras más complejo sea el proceso de construcción que se esté modelando, es decir, la complejidad depende directamente de la dificultad del proceso para realizar de dicho sistema.
 Los modelos se construyen para comprender mejor el sistema que se está desarrollando. A través de estos modelos se consigue: 
 
 1. Visualizar como es o queremos que sea un sistema. 
@@ -21,7 +21,6 @@ El modelo UML consta de 5 tipos de vistas y 9 tipos de diagramas, estos diagrama
 ![[diagramas_uml.png]]
 
 La finalidad de los diagramas es presentar diversas perspectivas de un mismo sistema. Es importante destacar que el Modelo UML describe lo que supuestamente hará un Sistema, pero no dice como implementar dicho sistema.
-La razón por la que existen tantos diagramas UML es porque le permite a las partes involucradas examinar un sistema desde distintos puntos de vista, esto es de suma importancia porque el proceso de construcción del sistema involucra a diferentes personas, los cuales tienen enfoques particulares en diferentes aspectos del sistema, en sí el objetivo es satisfacer a cada Persona involucrada.
-Recordemos que nuestro proceso para desarrollar una aplicación de software consiste de los siguientes pasos
+La razón por la que existen tantos diagramas UML es porque le permite a las partes involucradas examinar un sistema desde distintos puntos de vista, esto es de suma importancia porque el proceso de construcción del sistema involucra a diferentes personas, los cuales tienen enfoques particulares en diferentes aspectos del sistema, en sí el objetivo es satisfacer a cada Persona involucrada. Recordemos que nuestro proceso para desarrollar software consiste de los siguientes pasos.
 
 ![[proceso-desarrollo.png]]
